--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,13 @@
+$color: #fff;
+$background: #222;
+$height: 50px;
+
 .textmenu {
 	display: flex;
 	position: absolute;
 	z-index: 1000;
-	background: #222;
+	color: $color;
+	background: $background;
 	transform: translateX(-50%);
 	display: none;
 
@@ -15,9 +20,8 @@
 		font-size: 16px;
 		text-align: center;
 		width: 40px;
-		height: 50px;
-		line-height: 50px;
-		color: #fff;
+		height: $height;
+		line-height: $height;
 		opacity: .75;
 		transition: all .15s ease-out;
 		box-sizing: content-box;
@@ -35,11 +39,16 @@
 			background: rgba(255,255,255, .15);
 		}
 		
-		&--heading1 {
+		&.active {
+			opacity: 1;
+			background: #666;
+		}
+				
+		&--heading2 {
 			font-size: 1.1em;
 		}
 		
-		&--heading2 {
+		&--heading3 {
 			font-size: .8em;
 		}
 		
@@ -51,4 +60,37 @@
 		background: rgba(255,255,255,.25);  
 	}
 	
+	&__link {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		z-index: 2;
+		background: $background;
+		display: none;
+	}
+	
+	&__linkinput {
+		flex-grow: 1;
+		background: transparent;
+		color: $color;
+		padding: 0 20px;
+		border: none;
+	}
+	
+	&__linkclose {
+		height: $height;
+		line-height: $height;
+		width: $height;
+		text-align: center;
+		cursor: pointer;
+	}
+	
+	&.link .textmenu__link {
+		display: flex;
+	}
+	
 }
+
+
