--- a/test/styles.scss
+++ b/test/styles.scss
@@ -10,7 +10,7 @@ $height: 50px;
   background: $background;
   // transform: translateX(-50%);
   display: none;
-  padding: 5px;
+  // padding: 5px;
 
   &.active {
     display: flex; 
