--- a/test/styles.scss
+++ b/test/styles.scss
@@ -2,92 +2,101 @@ $color: #fff;
 $background: #222;
 $height: 50px;
 
-.textmenu {
-  display: flex;
-  position: absolute;
-  z-index: 1000;
-  color: $color;
-  background: $background;
-  // transform: translateX(-50%);
-  display: none;
-  // padding: 5px;
+.texteditor {
 
-  &.active {
-    display: flex; 
-  }
+	&__menu {
+		display: flex;
+		position: absolute;
+		z-index: 1000;
+		color: $color;
+		background: $background;
+		display: none;
 
-  &__button {
-    cursor: pointer;
-    font-size: 16px;
-    text-align: center;
-    width: 40px;
-    height: $height;
-    line-height: $height;
-    opacity: 0.75;
-    transition: all 0.15s ease-out;
-    box-sizing: content-box;
+		&.active {
+			display: flex; 
+		}
 
-    &:first-child {
-      padding-left: 5px;
-    }
+		&.link .texteditor__link {
+			display: flex;
+		}
 
-    &:last-child {
-      padding-right: 5px;
-    }
+	}
 
-    &:hover {
-      opacity: 1;
-      background: rgba(255, 255, 255, 0.15);
-    }
+	&__button {
+		cursor: pointer;
+		font-size: 16px;
+		text-align: center;
+		width: 40px;
+		height: $height;
+		line-height: $height;
+		opacity: 0.75;
+		transition: all 0.15s ease-out;
+		box-sizing: content-box;
 
-    &.active {
-      opacity: 1;
-      background: #666;
-    }
+		&:first-child {
+			padding-left: 5px;
+		}
 
-    &--heading2 {
-      font-size: 1.1em;
-    }
+		&:last-child {
+			padding-right: 5px;
+		}
 
-    &--heading3 {
-      font-size: 0.8em;
-    }
-  }
+		&:hover {
+			opacity: 1;
+			background: rgba(255, 255, 255, 0.15);
+		}
 
-  &__divider {
-    width: 1px;
-    margin: 10px;
-    background: rgba(255, 255, 255, 0.25);
-  }
+		&.active {
+			opacity: 1;
+			background: #666;
+		}
 
-  &__link {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 2;
-    background: $background;
-    display: none;
-  }
+		&--h2 {
+			font-size: 1.1em;
+		}
 
-  &__linkinput {
-    flex-grow: 1;
-    background: transparent;
-    color: $color;
-    padding: 0 20px;
-    border: none;
-  }
+		&--h3 {
+			font-size: 0.8em;
+		}
 
-  &__linkclose {
-    height: $height;
-    line-height: $height;
-    width: $height;
-    text-align: center;
-    cursor: pointer;
-  }
+		&--divider {
+			cursor: default;
+			width: 1px;
+			margin: 0 10px;
+			background: rgba(255, 255, 255, 0.25) !important;
+		}
 
-  &.link .textmenu__link {
-    display: flex;
-  }
+	}
+
+	&__link {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		z-index: 2;
+		background: $background;
+		display: none;
+	}
+
+	&__linkinput {
+		flex-grow: 1;
+		background: transparent;
+		color: $color;
+		padding: 0 20px;
+		border: none;
+	}
+
+	&__linkclose {
+		height: $height;
+		line-height: $height;
+		width: $height;
+		text-align: center;
+		cursor: pointer;
+	}
+
+	&.link .texteditor__link {
+		display: flex;
+	}
+
 }
